<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/search_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/paneButtonsSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editTextSearch"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:weightSum="4" >

        <Button
            android:id="@+id/buttonGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:onClick="searchGoogle"
            android:shadowColor="#A9AFD6"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/google"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonYahoo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:onClick="searchYahoo"
            android:shadowColor="#A9AFD6"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/yahoo"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonBing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:onClick="searchBing"
            android:shadowColor="#A9AFD6"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/bing"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonWiki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:onClick="searchWiki"
            android:shadowColor="#A9AFD6"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/wikipedia"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewMusicName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/paneButtonsPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewMusicName"
        android:orientation="horizontal"
        android:weightSum="4" >

        <ImageButton
            android:id="@+id/imageButtonBackward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/lessless"
            android:onClick="previousMusic"
            android:src="@drawable/ic_backward"
            android:background="@null"
            android:tag="back" />

        <ImageButton
            android:id="@+id/imageButtonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/play"
            android:onClick="startPlayer"
            android:src="@drawable/ic_play"
            android:background="@null"
            android:tag="play" />

        <ImageButton
            android:id="@+id/imageButtonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/stop"
            android:onClick="stopMusic"
            android:src="@drawable/ic_stop"
            android:background="@null"
            android:tag="stop" />

        <ImageButton
            android:id="@+id/imageButtonForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/moremore"
            android:onClick="nextMusic"
            android:src="@drawable/ic_forward"
            android:background="@null"
            android:tag="forwa" />
    </LinearLayout>

</RelativeLayout>